@@ -27,6 +27,7 @@ Changes since the last public release (1.6.16):
 
 Version 1.6.17beta01 [December 23, 2014]
   Removed duplicate PNG_SAFE_LIMITS_SUPPORTED handling from pngconf.h
+  Corrected the width limit calculation in png_check_IHDR().
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
